<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NaoSocioFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nao_socio_default_margin"
        android:hint="@string/nome_empresa"
        app:layout_constraintBottom_toTopOf="@+id/tilEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/tilTelefone"
        app:layout_constraintEnd_toEndOf="@+id/tilNome"
        app:layout_constraintStart_toStartOf="@+id/tilNome"
        app:layout_constraintTop_toBottomOf="@+id/tilNome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nao_socio_default_margin"
        android:hint="@string/telefone"
        app:layout_constraintBottom_toTopOf="@+id/tilSenha"
        app:layout_constraintEnd_toEndOf="@+id/tilNome"
        app:layout_constraintStart_toStartOf="@+id/tilNome"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nao_socio_default_margin"
        android:hint="@string/senha"
        app:layout_constraintBottom_toTopOf="@+id/tilConfirmarSenha"
        app:layout_constraintEnd_toEndOf="@id/tilNome"
        app:layout_constraintStart_toStartOf="@id/tilNome"
        app:layout_constraintTop_toBottomOf="@+id/tilTelefone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmarSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nao_socio_default_margin"
        android:hint="@string/confirmar_senha"
        app:layout_constraintEnd_toEndOf="@+id/tilNome"
        app:layout_constraintStart_toStartOf="@+id/tilNome"
        app:layout_constraintTop_toBottomOf="@+id/tilSenha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nao_socio_default_margin"
        android:layout_marginBottom="@dimen/nao_socio_default_margin"
        android:text="@string/cadastrar"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmarSenha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tilNome"
        app:layout_constraintStart_toStartOf="@id/tilNome"
        app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>